fix(lcv2): more info page spacing

--- a/src/modules/Dashboard/modules/LearningCircleV2/pages/moreInfoLC/MoreInfoLC.module.css
+++ b/src/modules/Dashboard/modules/LearningCircleV2/pages/moreInfoLC/MoreInfoLC.module.css
@@ -1,10 +1,8 @@
 .container {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
     display: flex;
     flex-direction: column;
     gap: 10px;
-    width: 100%;
+    width: 95%;
 
     .backLink {
         display: flex;
@@ -123,6 +121,7 @@
 
 @media screen and (max-width: 768px) {
     .container {
+        width: 100%;
         .card {
             .cardContent {
                 grid-template-columns: 1fr;
